# jumpdb

./: ANT.md  README.md  pyproject.toml
jumpdb/: __main__.py  cli.py  jumpdb.spec  select.sql  settings.toml
jumpdb/api/: api.py  api_router.py
jumpdb/api/etl/: etl_database_api.py
jumpdb/api/etl_database/: etl_database_api.py
jumpdb/api/inspector/: inspector_api.py
jumpdb/api/routes/: api_router.py
jumpdb/api/routes/etl/: etl_database.py
jumpdb/api/routes/inspector/: inspector.py
jumpdb/cli/: cli.py  etl_database_cli.py  inspector_cli.py  main_typer.py
jumpdb/cli/validator/: cli_validator.py
jumpdb/configs/: config.py
jumpdb/repository/: inspect_repository.py
jumpdb/repository/datasource/: datasource_connection.py
jumpdb/repository/extract/: extract_repository.py
jumpdb/repository/load/: load_repository.py
jumpdb/serializers/: etl_database.py  etl_database_serial.py  inspector.py
jumpdb/service/etl/: etl_database.py  mapping.py
jumpdb/service/inserpector/: connection_service.py  inspector_service.py
jumpdb/utils/: file_util.py  sql_parser_util.py  table_util.py
