[tool.poetry]
name = "jumpdb"
version = "0.1.0"
description = ""
authors = ["hsdanield <hsdanield@gmail.com>"]
readme = "README.md"
include = ["jumpdb/settings.toml"]

[tool.poetry.dependencies]
python = "^3.11"
dynaconf = "^3.1.11"
sqlalchemy = "^2.0.1"
cx-oracle = "^8.3.0"
rich = "^13.3.1"
typer = "^0.7.0"
sqlparse = "^0.4.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.9.0"

[tool.poetry.scripts]
jumpdb = "jumpdb.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
